--- a/src/ui/elements/Tooltip/tooltip.scss
+++ b/src/ui/elements/Tooltip/tooltip.scss
@@ -46,6 +46,8 @@
         display: flex;
         flex-direction: column;
         gap: 4px;
+        max-width: 500px;
+        overflow: hidden;
 
         &::before {
             --oversize-container-size: 7px;
@@ -102,11 +104,15 @@
                     font-size: 16px;
                     font-weight: 600;
                     color: var(--pivotick-text-color);
+                    user-select: all;
+                    white-space: wrap;
                 }
 
                 .pivotick-mainheader-nodeinfo-subtitle {
                     font-size: 12px;
                     color: var(--pivotick-text-color-softer);
+                    user-select: all;
+                    white-space: wrap;
                 }
 
                 .pivotick-mainheader-nodeinfo-action {
